# SoundToAct

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini  test_microphone.py
Specs/: API.idr  Actions.idr  Errors.idr  Keywords.idr  Recognition.idr  SoundToAct.idr  Types.idr  VoiceListener.idr
app/: __init__.py  actions.py  api.py  models.py  voice_listener.py
examples/: __init__.py  cli_example.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: KeywordManager.css  KeywordManager.jsx  StatusBar.css  StatusBar.jsx  VoiceRecorder.css  VoiceRecorder.jsx
presentations/: ImageGeneration.idr  ImageSpec.idr  KEYNOTE_COMPATIBILITY_ISSUES.md  PRESENTATION_SPEC.md  Presentation.idr  README.md  create_pptx_with_images.py  create_simple_compatible_ppt.py  create_text_based_ppt.py  generate_all_images.py  generate_images_from_spec.py  inspect_pptx_detail.py  slides_from_idris.py  test_pptx_simple.py  update_image_mappings.py  validate_ppt.py  validate_pptx.py
presentations/archive/: SoundToAct_Presentation.pptx  create_pptx.py  generate_images.py  generate_ppt.py  presentation.json  presentation.md
presentations/output/: SoundToAct_Presentation_Final.pptx  SoundToAct_Presentation_WithImages.pptx  SoundToAct_Simple.pptx  SoundToAct_TextBased_Presentation.pptx  TEST_Simple.pptx  presentation_from_idris.json
tests/: __init__.py  conftest.py  test_actions.py  test_api.py  test_models.py  test_voice_listener.py
