[project]
name = "soundtoact"
version = "0.1.0"
description = "Voice-triggered automation app"
requires-python = ">=3.13"
dependencies = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.14",
    "openai-whisper>=20230314",
    "torch>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]
